<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="options">Options</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="visibilities">Visibilities</string>
    <string name="count_likes" translatable="false">10</string>
    <string name="count_shares" translatable="false">5</string>
    <string name="count_visibility" translatable="false">125</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="post_text">Post text</string>
    <string name="menu_edit">Edit</string>
    <string name="description_post_save">Save</string>
    <string name="edit_message">Edit message</string>
    <string name="description_edit_cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
</resources>